[gd_scene load_steps=6 format=3 uid="uid://84qmf365hrpp"]

[ext_resource type="Script" path="res://ui/hud/hud.gd" id="1_lybgv"]
[ext_resource type="PackedScene" uid="uid://osdm0fe7kx3u" path="res://ui/hud/notification_label.tscn" id="2_fbu01"]
[ext_resource type="Texture2D" uid="uid://ca0qggwptkx2k" path="res://ui/icon/HatIcon.png" id="3_2yiy5"]
[ext_resource type="Texture2D" uid="uid://75lor1ak8wo8" path="res://ui/icon/HatIconRed.png" id="4_rokwv"]
[ext_resource type="Texture2D" uid="uid://dxpcxa27b6h" path="res://scenes/collectable/shiney/ShinyIcon.png" id="5_ufssh"]

[node name="HUD" type="CanvasLayer" groups=["HUD"]]
process_mode = 3
script = ExtResource("1_lybgv")
notification_label = ExtResource("2_fbu01")

[node name="HeartDisplayBackground" type="TextureRect" parent="."]
modulate = Color(1, 1, 1, 0.407843)
custom_minimum_size = Vector2(42, 21)
offset_left = 10.0
offset_top = 10.0
offset_right = 34.0
offset_bottom = 18.0
texture = ExtResource("3_2yiy5")
expand_mode = 1
stretch_mode = 1

[node name="HeartDisplay" type="TextureRect" parent="."]
custom_minimum_size = Vector2(0, 14)
offset_left = 10.0
offset_top = 10.0
offset_right = 52.0
offset_bottom = 31.0
texture = ExtResource("4_rokwv")
expand_mode = 1
stretch_mode = 1

[node name="NotificationContainer" type="MarginContainer" parent="."]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -28.0
offset_right = 40.0
offset_bottom = 12.0
grow_vertical = 0
scale = Vector2(0.7, 0.7)
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="NotificationContainer"]
layout_mode = 2
alignment = 2

[node name="ShineyThingsContainer" type="MarginContainer" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -83.0
offset_bottom = 40.0
grow_horizontal = 0
theme_override_constants/margin_left = 6
theme_override_constants/margin_top = 6
theme_override_constants/margin_right = 6
theme_override_constants/margin_bottom = 6

[node name="VBoxContainer" type="VBoxContainer" parent="ShineyThingsContainer"]
layout_mode = 2
size_flags_horizontal = 8

[node name="HBoxContainer" type="HBoxContainer" parent="ShineyThingsContainer/VBoxContainer"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="ShineyThingsContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
texture = ExtResource("5_ufssh")
stretch_mode = 3

[node name="ShineyThingsLabel" type="Label" parent="ShineyThingsContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "0 of 0"
